# sVisualizer

./: .gitignore  CMakeLists.txt  Makefile  main.c
desktop/: sVisualizer.desktop
